[package]
name = "keycat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }
rayon = { version = "1.8.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
opt = ["dep:rayon", "dep:rand"]
